[package]
name = "jib2_parser"
authors = "Koehler, Nils <nils.koehler1@gmx.net>"
version = "0.1.0"
edition = "2021"
desciption = "Simple decoder library from jbig2 decoded buffers"
readme = "README.md"
license-file = "LICENSE"


[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }

